<resources>
    <string name="app_name">Sky</string>
    <string name="hello_world">Hello  World!</string>
    <string name="backgroundImg">This is background image</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">settings</string>

    <!--    PLACEHOLDERS-->
    <string name="icon_placeholder_description">This is weather icon</string>
    <string name="rain_percentage_placeholder">5%</string>
    <string name="temperature_degree_placeholder">15°</string>
    <string name="time_placeholder">00:00</string>
    <string name="day_text_placeholder">Monday</string>
    <string name="Expand">Expand</string>
    <string name="Collapse">Collapse</string>


    <string name="use_system_mode">Use Custom Mode?</string>
    <string name="use_dark_mode">Dark Mode?</string>

    <!--    PREFERENCE'S -->
    <string name="PREFERENCES">SkyPreferences</string>
    <string name="LAST_PAGE">LAST_PAGE</string>
    <string name="WEATHER">WEATHER</string>
    <string name="SETTINGS">SETTINGS</string>
    <string name="DEFAULT">DEFAULT</string>
    <string name="CUSTOM_MODE">CUSTOM_MODE</string>
    <string name="DARK_MODE">DARK_MODE</string>
    <string name="city_name_hint">Enter City Name</string>
    <string name="add_city">Add City</string>
    <string name="CITY_SEARCH">CITY_SEARCH</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="wind">Wind</string>
    <string name="visibility">Visibility</string>
    <string name="city_name_placeholder">City</string>
    <string name="degree_sign">°</string>
    <string name="celsius">Celsius</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="UNITS">UNITS</string>
    <string name="PINNED_CITY">PINNED_CITY</string>
</resources>