<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="70dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/ico_weather"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:contentDescription="@string/hello_world"
        android:src="@drawable/ic_settings" />


    <LinearLayout
        android:id="@+id/rain_container"
        android:layout_width="match_parent"
        android:layout_height="30dp">

        <ImageView
            android:id="@+id/ico_rain"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/rain_percentage_placeholder"
            android:src="@drawable/ic_settings" />

        <TextView
            android:id="@+id/txt_rain_percentage"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="center"
            android:inputType="none"
            android:text="@string/temperature_degree_placeholder" />
    </LinearLayout>


    <TextView
        android:id="@+id/txt_temperature"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:ems="10"
        android:gravity="center"
        android:inputType="none"
        android:text="@string/temperature_degree_placeholder" />

    <TextView
        android:id="@+id/txt_time"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:ems="10"
        android:gravity="center"
        android:inputType="none"
        android:text="@string/time_placeholder" />
</LinearLayout>