<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/side_menu"
    style="@style/menu_button"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginVertical="5dp"
    android:gravity="center"
    android:orientation="horizontal"
    android:paddingHorizontal="10dp">


    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start|center_vertical"
        android:layout_weight="2"
        android:text="@string/city_name_placeholder"
        android:textAlignment="textStart" />

    <ImageView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:contentDescription="@string/icon_placeholder_description"
        android:src="@drawable/full_sun" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="end|center_vertical"
        android:layout_weight="1"
        android:text="@string/temperature_degree_placeholder"
        android:textAlignment="textEnd" />
</LinearLayout>