<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".viewModel.SettingsFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout="@layout/tool_bar" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/st_system_mode"
            style="@style/Theme.Sky.Setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/use_system_mode" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/st_dark_mode"
            style="@style/Theme.Sky.Setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/use_dark_mode" />
        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/units"
            style="@style/Theme.Sky.Setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/celsius" />
    </LinearLayout>

</ScrollView>