<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >


    <LinearLayout
        android:id="@+id/compact_forecast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_day"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="start|center_vertical"
            android:text="@string/time_placeholder"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/img_forecast_day"
            style="@style/daily_forecast_img_day_1"
            android:contentDescription="@string/icon_placeholder_description"
            app:srcCompat="@drawable/full_sun" />


        <ImageView
            android:id="@+id/img_rain"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_weight="1"
            android:contentDescription="@string/icon_placeholder_description"
            app:srcCompat="@drawable/raindrop" />

        <TextView
            android:id="@+id/txt_rain"
            android:layout_width="20dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="start|center_vertical"
            android:text="@string/rain_percentage_placeholder"
            android:textSize="11sp" />

        <TextView
            android:id="@+id/txt_temperature_day"
            android:layout_width="20dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/temperature_degree_placeholder"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/txt_temperature_night"
            android:layout_width="20dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/temperature_degree_placeholder"
            android:textSize="14sp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/compact_forecast"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="visible">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/time_placeholder" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/time_placeholder" />

    </LinearLayout>
</RelativeLayout>

